Cut 6.9 release of Racket docker image
Same as always, I guess, at least until they start releasing the image
to a different place. I'm about a month late on this.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,11 @@ language: ruby
 services: 
   - docker
 script: 
-  - docker build -t racket .
-  - docker run -it racket
+  - docker build -t ptrteixeira/racket:6.9 -t ptrteixeira/racket:latest .
+  - docker run -it ptrteixeira/racket
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push ptrteixeira/racket:latest;
+    docker push ptrteixeira/racket:6.9;
+    fi
